src/styles/partials/_header.scss
.nav-bar {
  @extend .container;

  position: fixed;
  top: 0;
  width: 100%;
  max-width: $max-width;
  margin: 0 auto;


  height: 50px;

  .background,
  .content {
    position: absolute;

    width: 100%;
    height: 100%;
  }

  .background {
    background-color: $dark-blue;
    opacity: 0;
    transition: opacity .5s;

    &.dark {
      opacity: .6;
    }
  }

  .content {
    padding: 10px;
    text-align: center;
  }

  ul {
    display: none;
    float: none;

    @include respond-to(medium) {
      display: block;
      float: right;
    }

    list-style-type: none;


    margin-top: 4px;
    margin-bottom: 0;

    li {
      display: inline;

      margin-right: 20px;

      &:last-of-type {
        margin-right: 0;
      }
    }
  }

  &.open-menu {
    height: 270px;

    .background {
        opacity: .9;
    }

    ul {
      display: inline;

      margin-top: 30px;

      li {
        display: list-item;
        margin: 15px;
      }
    }

    font-size: 18px;
  }

  font-size: 15px;
  font-weight: 300;

  a:link,
  a:visited,
  a:hover,
  a:active {
    color: darken($light-gray, 10%);
    text-decoration: none;

    &.current {
      color: $white;
    }

    &:hover {
      color: $white;
    }
  }

  $size: 30px;

  .logo,
  .nav-icon {
    position: absolute;
    top: 10px;

    svg {
      width: $size;
      height: $size;
    }
  }

  .logo {
    left: 10px;
  }

  .nav-icon {
    right: 10px;

    @include respond-to(medium) {
      display: none;
    }
  }
}

